remove unnecessary material ui

--- a/src/components/features/Posters/Posters.module.scss
+++ b/src/components/features/Posters/Posters.module.scss
@@ -64,8 +64,9 @@
   position: fixed;
   top: 20px;
   right: 50px;
-
-  padding: 2px;
+  width: 30px;
+  height: 30px;
+  padding: 2px 0 0 10px;
   background-color: rgba(0, 0, 0, 0.4);
   color: $icon-color;
   cursor: pointer;
