Move giveOutFood to separete json file & implement data to new component

--- a/src/components/common/AboutProgram/AboutProgram.module.scss
+++ b/src/components/common/AboutProgram/AboutProgram.module.scss
@@ -31,8 +31,8 @@
   cursor: grab;
 
   &:hover {
-    color: $gold;
-    border-bottom: 1px solid $gold;
+    color: $bottom-color-below-title;
+    border-bottom: 1px solid $bottom-color-below-title;
   }
 }
 
@@ -80,7 +80,7 @@
     margin-left: 33%;
 
     &:hover {
-      color: $gold;
+      color: $bottom-color-below-title;
     }
   }
 }
