--- a/src/components/common/Announcement/Announcement.module.scss
+++ b/src/components/common/Announcement/Announcement.module.scss
@@ -1,12 +1,25 @@
 @import "../../../styles/settings.scss";
 
+.root {
+  margin: 0.75rem 0 0.75rem 0;
+  &::after {
+    background-color: rgb(145, 144, 144);
+    content: "";
+    display: block;
+    height: 1px;
+    left: 50%;
+    margin-top: 0.25rem;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    width: 50px;
+  }
+}
 .announcementTitle {
-  @include subsectionTitle;
   @include flex(null, null, flex-start);
 }
 
 .announcementDetails {
-  margin-left: 6%;
+  margin-left: 5%;
 }
 
 /* ExtraExtraLarge Devices, UltraWide Desktops  */
