Fix margin between announcements & Fix heading in ProgramDepartments

--- a/src/components/common/ProgramDepartments/ProgramDepartments.module.scss
+++ b/src/components/common/ProgramDepartments/ProgramDepartments.module.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/settings.scss";
-
+.root {
+  .departmentsTitle {
+    @include sectionTitle;
+  }
+}
 .departmentsList {
   @include flex(row, null, center);
   margin: 0 25px 0 25px;
@@ -22,9 +26,6 @@
       &::after {
         display: none;
       }
-    }
-    .departmentsTitle {
-      @include sectionTitle;
     }
     .departmentAddress {
       margin-top: 25px;
