left splah only on main page && add new page - to download && femove download link from program departments

--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
   @include flex(column, center, center);
-  height: 100vh;
+  // height: 100vh;
   position: relative;
   text-align: center;
 
