--- a/src/components/views/ToDownload/ToDownload.module.scss
+++ b/src/components/views/ToDownload/ToDownload.module.scss
@@ -10,18 +10,30 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  padding-top: 0;
   padding: 0 auto;
+  min-height: 80vh;
 }
 
-.MainViewSection {
+.section {
   width: 100%;
   padding-bottom: $padding-below-sections;
   padding-top: 15px;
 }
 
-.HeroSection {
-  margin-bottom: 90vh;
+.container {
+  margin-top: 25px;
+}
+
+.row {
+  @include flex(row, null, center);
+  list-style: none;
+  margin: 0 25px 0 25px;
+  padding-left: 0;
+}
+
+.toDownloadTitle {
+  @include sectionTitle;
+  font-size: 1.8rem;
 }
 
 /* ExtraExtraLarge Devices, UltraWide Desktops  */
@@ -38,30 +50,68 @@
     width: 55%;
   }
 }
+
 /* Large Devices, Laptops, Large Tablets iPad Pro */
 @media only screen and (min-width: 1024px) and (max-width: 1199px) {
   .root {
     width: 80%;
+
+    .row {
+      margin: 0 15px 0 15px;
+    }
   }
 }
+
 
 /* Medium Devices, Tablets iPad */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .root {
     width: 95%;
+
+    .row {
+      margin: 0 10px 0 10px;
+    }
   }
 }
+
 
 /* Small Devices, Small tablets Large Phones */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .root {
     width: 95%;
+
+    .toDownloadTitle {
+      font-size: 1.5rem;
+      text-align: center;
+    }
+
+    .container {
+      margin-top: 25px;
+    }
+
+    .row {
+      margin: 0 5px 0 5px;
+    }
   }
 }
+
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width: 0px) and (max-width: 479px) {
   .root {
     width: 95%;
+
+    .toDownloadTitle {
+      font-size: 1.5rem;
+      text-align: center;
+    }
+
+    .container {
+      margin-top: 25px;
+    }
+
+    .row {
+      margin: 0 3px 0 3px;
+    }
   }
 }
