--- a/src/components/features/Splash/Splash.module.scss
+++ b/src/components/features/Splash/Splash.module.scss
@@ -21,6 +21,7 @@
     left: 50%;
     position: absolute;
     top: 50%;
+    text-align: center;
     transform: translate(-50%, -50%);
     img {
       height: 8rem;
